enables grants and roles edit